Truncate tag name and hopefully fix comment form

--- a/public/stylesheets/post_display.sass
+++ b/public/stylesheets/post_display.sass
@@ -349,7 +349,7 @@
     font-size: 18px
   
   .txt
-    width: 469px
+    width: 467px
     background-color: white
     padding-top: 1px
     padding-left: 8px
